Kubernetes-deep-dive/webhook/validating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pe-validating
webhooks:
- name: validate.platform.demo
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
  clientConfig:
    service:
      name: pe-webhook
      namespace: platform-demo
      port: 8443
      path: /validate
    caBundle: "QmdrcWhraUc5dzBCQVFzRkFEQW4NCk1TVXdJd1lEVlFRRERCeHdaUzEzWldKb2IyOXJMbkJzWVhSbWIzSnRMV1JsYlc4dWMzWmpNQjRYRFRJMU1USXoNCk1UQTRNamd4TlZvWERUSTJNVEl6TVRBNE16Z3hORm93SnpFbE1DTUdBMVVFQXd3Y2NHVXRkMlZpYUc5dmF5NXcNCmJHRjBabTl5YlMxa1pXMXZMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUINCkFPQ1FMMStncjl0dEVrNzZUMmczMWV6a05aK3ZWNlZ6ZnR0d241NDNRRC9KampXNGs5TUF3cjRCbHd1cnpRWDYNCnIwV2d3em5ZNlRiMjVqb0d0WjE5czFEM2tuMkNySkg0bmV1TksxMHB3UTgvakxQM1FTdWVuTUVKSndmRzRwYnENCk5WaEdTam9ZaHVTM [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
